[package]
name = "ldap-rs"
version = "0.3.1"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "LDAP client for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/ancwrd1/ldap-rs"
documentation = "https://docs.rs/ldap-rs"
readme = "README.md"
keywords = ["ldap", "client"]
edition = "2021"

[dependencies]
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1", features = ["net", "time", "rt-multi-thread"] }
bytes = "1"
futures = "0.3"
rasn-ldap = "0.6"
rasn = "0.6"
thiserror = "1"
log = "0.4"
pest = "2"
pest_derive = "2"
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
rustls = { version = "0.20", optional = true, features = ["dangerous_configuration"] }
tokio-rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.6", optional = true }
parking_lot = "0.12"
regex = "1"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4"

[features]
default = ["default-tls"]
default-tls = ["tls-native-tls"]
tls-native-tls = ["native-tls", "tokio-native-tls", "__tls"]
tls-rustls = ["rustls", "tokio-rustls", "rustls-native-certs", "__tls"]
__tls = []
